fix: limit max height (and allow scroll when overflowing)

--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@
   bottom: 0;
   left: 0;
   background-color:navy;
+  max-height: 100%;
+  overflow: auto;
   max-width: 20em;
   padding: 0.5em;
   padding-right: 0.75em;
